# drishti

./: .gitignore  Google_Colab_Guide.md  Homogeneous_vs_Heterogeneous_Debate.md  README.md  T-MoE-LLaVA_Final_Proposal.md  TMoE_AntiDrone_Architecture.md  dry_run_trace.md  eval_actual.py  experiment.py  implementation_plan.md  main.py  procedure.md  pyproject.toml  run_ablations.py  run_experiment.ps1  run_experiment.sh  run_experiments.py  run_pipeline.py  smoke_test.py  train_actual.py  train_full.py  train_single_video.py
DRISHTI-CORE/: .gitignore  README.md  dataset_pipeline.md  implementation_plan.md  requirements.txt  setup.py
DRISHTI-CORE/scripts/: extract_frames.py  run_stride_sweep.py
DRISHTI-CORE/tests/: test_moe.py  test_pipeline.py
configs/: ablation_dense_moe.yaml  ablation_no_edge_crops.yaml  ablation_no_ldmi.yaml  default.yaml
drishti_v2/: __init__.py
drishti_v2/data/: __init__.py  utils.py
experiment_results/: experiment_report.md  results_summary.csv
models/: __init__.py  cache.py  moe_layer.py  motion_encoder.py  real_model.py  router.py  tmoe_model.py
results_smoke_core/: config.json  eval_summary.json  train_history.csv
results_smoke_verify/: config.json  eval_summary.json  train_history.csv
scripts/: prepare_dataset.py  run_stride_sweep.py
tests/: test_crop_proposal.py  test_dataset_pipeline.py  test_ldmi.py  test_losses.py  test_modules.py  test_moe.py  test_motion_cnn.py  test_motion_gate.py  test_pipeline.py
train/: __init__.py  activitynetqa.py  antiuav.py  dataset.py  drishti_loss.py  loss.py  trainer.py
(+77 files in other folders)
