[project]
name = "temporal-moe-vit"
version = "0.1.0"
description = "Research scaffold for T-MoE-LLaVA 2.0 Micro-MoE video-language modeling."
requires-python = ">=3.10"
dependencies = [
    "torch",
    "datasets",
    "huggingface_hub",
    "matplotlib",
    "numpy",
    "python-dotenv",
    "tqdm",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
