[project]
name = "temporal-moe-vit"
version = "0.1.0"
description = "Research scaffold for sparse motion-conditioned Anti-UAV detection."
requires-python = ">=3.10"
dependencies = [
    "torch",
    "torchvision",
    "pycocotools",
    "matplotlib",
    "numpy",
    "tqdm",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
